fix: compatibility with intellij 243+
- Update since build to 243
- Update target to 2024.3.1
- Upgrade gradle intellij platform plugin to v2
- Fix SearchViewModelBase quick filter parameter type change

Signed-off-by: jchrist <jchrist@cytech.gr>